[package]
name = "byhttp"
version = "0.2.0"
authors = ["Lohikar <lohikar@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
once_cell = "1.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
ureq = { version = "2.4", features = ["native-certs"] }
