[package]
name = "byhttp"
version = "0.2.1"
authors = ["Lohikar <lohikar@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
once_cell = "1.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
ureq = { version = "3.0", features = ["platform-verifier"] }
http = "1.3"
